# warp-parse

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  setup.sh
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.claude/skills/: update-changelog.md
.github/: dependabot.yml
.github/release-please/: config.json  manifest_tpl.json
.github/workflows/: build-and-test.yml  dependabot-branch-filter.yml  release-please.yml  release.yml
_gal/: adm.gxl  vfm.gxl  work.gxl
_gal/mods/: git.gxl  ver.gxl
_gal/tpl/: Cargo.toml
crates/warp-self-update/: Cargo.toml
crates/warp-self-update/src/: fetch.rs  install.rs  lib.rs  manifest.rs  types.rs  versioning.rs
crates/wp-self-update/: Cargo.toml
crates/wp-self-update/src/: error.rs  fetch.rs  lib.rs  manifest.rs  platform.rs  types.rs  versioning.rs
docker/: Dockerfile
docker/default_setting/conf/: wparse.toml  wpgen.toml
docker/default_setting/connectors/sink.d/: 01-file_json_sink.toml  02-file_kv_sink.toml  03-file_proto_sink.toml  03-kafka_sink.toml  04-file_rescue_sink.toml  05-syslog_sink.toml  06-mysql_sink.toml  07-victorialog_sink.toml  08-tcp_sink.toml  09-victorialog_sink.toml  10-victoriametric_sink.toml
docker/default_setting/connectors/source.d/: 00-file_src.toml  01-kafka_src.toml  02-mysql_src.toml  03-syslog_src.toml  04-tcp_src.toml
docker/default_setting/topology/sources/: wpsrc.toml
docs/: AUTOMATED_DEPENDENCY_MANAGEMENT.md  INDEX.md  README.md  RELEASE_STRATEGY.md  SELF_UPDATE_DESIGN.md  STRATEGY_COMPARISON.md  THREE_BRANCH_STRATEGY.md  performance.md
docs/design/en/: README.md  admin_api_development.md  branch_protection_rules.md  branch_source_and_maturity_control.md  project_remote_sync_design.md  release_management.md  self_update_design.md  wp_update_repo_layout.md
docs/design/zh/: README.md  admin_api_development.md  branch_protection_rules.md  branch_source_and_maturity_control.md  error-design-short.md  project_remote_sync_design.md  release_management.md  self_update_design.md  wp_update_repo_layout.md
docs/use/en/: README.md  engine_admin_usage.md  product_overview.md  remote_project_sync_and_rule_reload.md
docs/use/en/cli/: project.md
docs/use/en/operations/: admin.md  project-sync.md
docs/use/zh/: README.md  engine_admin_usage.md  product_overview.md  remote_project_sync_and_rule_reload.md
docs/use/zh/cli/: project.md
docs/use/zh/operations/: admin.md  project-sync.md
docs/user-guide/01-cli/: 02-run_modes.md  03-wpgen.md  04-wproj.md  05-wprescue.md  README.md
docs/user-guide/02-config/: 01-wparse_config.md  02-sources.md  05-connectors_naming.md
docs/user-guide/03-sinks/: 01-sinks_basics.md
docs/user-guide/04-sources/: 08-tcp_source.md
docs/user-guide/06-wpl/: 01-wpl_basics.md  README.md
scripts/: extract-changelog.sh  migrate-to-three-branches.sh  prepare-release.sh
src/: admin_api.rs  compat.rs  feats.rs  lib.rs  project_remote.rs
src/project_remote/: managed.rs  mod.rs  repo.rs  state.rs  test_support.rs
src/wpadm/: args.rs  main.rs
src/wpadm/handlers/: data.rs  engine_config.rs  rule.rs  self_update.rs  stat.rs
src/wparse/: cli.rs  enterprise.rs  feats.rs  main.rs
src/wpgen/: cli.rs  conf.rs  data.rs  feats.rs  main.rs  rule.rs  sample.rs  wpcli.rs
src/wprescue/: feats.rs  main.rs
src/wproj/: args.rs  format.rs  main.rs  plugins.rs
src/wproj/handlers/: cli.rs  conf.rs  data.rs  engine.rs  engine_config.rs  init.rs  knowdb.rs  mod.rs  project.rs  rescue.rs  rule.rs  self_update.rs  sinks.rs  sources.rs  stat.rs  validate.rs
tasks/: 2026-02-19_1_update-changelog.md
tests/: admin_api_daemon.rs
