# ===========================================================================
# Warp Parse - Flow Data Processing System
# ===========================================================================
#
# Binary applications for data parsing and processing:
#   - wparse:   主解析引擎
#   - wpgen:    规则生成工具
#   - wproj:    项目管理工具
#   - wprescue: 数据恢复工具
#
# Feature flags:
#   - default/community: 社区版（含 Kafka、MySQL、ClickHouse 等）
#   - runtime-core:      最小运行时
#
# ===========================================================================

[package]
name = "warp-parse"
version = "0.15.4"
edition = "2021"
rust-version = "1.75"
authors = ["Warp Parse Team"]
license = "ELv2"
description = "High-performance flow data parsing and processing system"
repository = "https://github.com/wp-labs/warp-parse"
keywords = ["parsing", "data-processing", "security", "log-analysis"]
categories = ["command-line-utilities", "parsing"]

# ===========================================================================
# Binary Applications
# ===========================================================================

[[bin]]
name = "wparse"
path = "src/wparse/main.rs"

[[bin]]
name = "wpgen"
path = "src/wpgen/main.rs"

[[bin]]
name = "wproj"
path = "src/wproj/main.rs"

[[bin]]
name = "wprescue"
path = "src/wprescue/main.rs"

# ===========================================================================
# Build Profiles
# ===========================================================================

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# ===========================================================================
# Package Metadata
# ===========================================================================

[package.metadata.cargo-udeps.ignore]
normal = ["ctor"]

# ===========================================================================
# Build Dependencies
# ===========================================================================

[build-dependencies]
shadow-rs = "1.5"

# ===========================================================================
# Dev Dependencies
# ===========================================================================

[dev-dependencies]
serial_test = "3.2"
httpmock = "0.8"
collection_literals = "1.0"
tempfile = "3.23"
criterion = "0.8"

# ===========================================================================
# Features
# ===========================================================================
[features]
# --- Default ---
default = ["community"]

# --- Runtime ---
core = []

# --- Community Edition (default) ---
community = [
    "core",
    "kafka",
    "doris",
    "mysql",
    "clickhouse",
    "elasticsearch",
    "prometheus",
    "victorialogs",
    "victoriametrics"
]

# --- Connectors (via wp_connectors) ---
kafka = ["wp-connectors/kafka"]
mysql = ["wp-connectors/mysql"]
doris = ["wp-connectors/doris"]
clickhouse = ["wp-connectors/clickhouse"]
elasticsearch = ["wp-connectors/elasticsearch"]
prometheus = ["wp-connectors/prometheus"]
victorialogs = ["wp-connectors/victorialogs"]
victoriametrics = ["wp-connectors/victoriametrics"]

# --- Enterprise ---

# --- Convenience ---
all = ["community"]

# --- Testing (cfg gates) ---
sys_test = []
res_depend_test = []

# --- Development ---
examples = []
perf-ci = []
dev-tools = []
wp-enterprise = []

# --- Plugins (placeholder for compatibility) ---
example-plugin = []
extras = []
plugin-suite = []

# ===========================================================================
# Dependencies
# ===========================================================================
#

[dependencies]
# --- System and Platform ---
sysinfo = "0.37"
async-signal = "0.2"
libc = "0.2"
signal-hook-registry = "1.4"
tikv-jemallocator = "0.6"

# --- Async Runtime ---
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-async-drop = "0.1"
futures-util = "0.3"
futures-lite = "2.6"
async-trait = "0.1"
async-broadcast = "0.7"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# --- Logging and Errors ---
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
orion-error = "0.5"
orion-sec = "0.3"
orion-variate = "0.10"
orion_conf = { version = "0.4", features = ["yaml", "toml"] }

# --- Time ---
chrono = "0.4"
time = "0.3"

# --- CLI ---
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2"

# --- Parsing ---
winnow = "0.7"
#regex = "~1.11"
wildmatch = "2.6"
strfmt = "0.2"
syslog = "7.0"

# --- Derive Macros ---
derive_more = { version = "2.1", features = ["full"] }
derive_builder = "0.20"
derive-getters = "0.5"
enum_dispatch = "0.3"
educe = { version = "0.6", features = ["Debug", "Default"] }

# --- Utilities ---
#bytes = "~1.7"
uuid = { version = "1.19", features = ["v4"] }
once_cell = "1.21"
lazy_static = "1.5"
contracts = "0.6"
ctor = "0.6"
hex = "0.4"
shadow-rs = { version = "1.5.0", default-features = false }
rand = "0.9"

# --- Data Structures ---
lru = "0.16"
ipnet = "2.11"

# --- File System ---
walkdir = "2.5"
glob = "0.3"

# --- Internal: Open API ---

wp-connector-api = "0.7"
wp-parse-api = "0.7"
wp-model-core = "0.7"

# --- Internal: Infrastructure ---
wp-log = "0.1"
wp-error = "0.7"
wp-specs = "0.7"
wp-conf-base = "0.1"
wp-data-fmt = "0.1"

# --- Internal: Engine ---
wp-engine     = {                            git = "https://github.com/wp-labs/wp-motor", tag = "v1.10.4" }
wp-config     = { package = "wp-config",     git = "https://github.com/wp-labs/wp-motor", tag = "v1.10.4" }
wp-lang       = { package = "wp-lang",       git = "https://github.com/wp-labs/wp-motor", tag = "v1.10.4" }
wp_knowledge  = { package = "wp-knowledge",  git = "https://github.com/wp-labs/wp-motor", tag = "v1.10.4" }
wp-cli-core   = { package = "wp-cli-core",   git = "https://github.com/wp-labs/wp-motor", tag = "v1.10.4" }
wp-proj       = { package = "wp-proj",       git = "https://github.com/wp-labs/wp-motor", tag = "v1.10.4" }

wp-connectors = { package = "wp-connectors", git = "https://github.com/wp-labs/wp-connectors", tag = "v0.7.5-alpha.1" }


# ===========================================================================
# Local Development Patches (template)
# ===========================================================================
# Uncomment to use local paths instead of git dependencies:
#
#[patch."https://github.com/wp-labs/wp-engine"]
#wp-engine = { path = "../wp-engine" }
#wp-config = { path = "../wp-engine/crates/wp-config" }
#wp-lang   = { path = "../wp-engine/crates/wp-lang" }
#wp-knowledge  = { path = "../wp-engine/crates/wp-knowledge" }
#wp-cli-core   = { path = "../wp-engine/crates/wp-cli-core" }
#wp-proj       = { path = "../wp-engine/crates/wp-proj" }
#
# [patch."https://github.com/wp-labs/wp-enterprise"]
# wp-enterprise = { path = "../wp-enterprise" }


# [patch."https://github.com/wp-labs/wp-connectors"]
# wp-connectors = { path = "../wp-connectors"}
