# ===========================================================================
# Warp Parse - Flow Data Processing System
# ===========================================================================
#
# Binary applications for data parsing and processing:
#   - wparse:   主解析引擎
#   - wpgen:    规则生成工具
#   - wproj:    项目管理工具
#   - wprescue: 数据恢复工具
#
# Feature flags:
#   - default/community: 社区版（含 Kafka、MySQL、ClickHouse 等）
#   - runtime-core:      最小运行时
#
# ===========================================================================

[package]
name = "warp-parse"
version = "0.20.3" # @gxl:set(version)
edition = "2021"
rust-version = "1.75"
authors = ["Warp Parse Team"]
license = "Apache-2.0"
description = "High-performance flow data parsing and processing system"
repository = "https://github.com/wp-labs/warp-parse"
keywords = ["parsing", "data-processing", "security", "log-analysis"]
categories = ["command-line-utilities", "parsing"]

# ===========================================================================
# Binary Applications
# ===========================================================================

[[bin]]
name = "wparse"
path = "src/wparse/main.rs"

[[bin]]
name = "wpgen"
path = "src/wpgen/main.rs"

[[bin]]
name = "wproj"
path = "src/wproj/main.rs"

[[bin]]
name = "wprescue"
path = "src/wprescue/main.rs"

# ===========================================================================
# Build Profiles
# ===========================================================================

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

# ===========================================================================
# Package Metadata
# ===========================================================================

[package.metadata.cargo-udeps.ignore]
normal = ["ctor"]

# ===========================================================================
# Build Dependencies
# ===========================================================================

[build-dependencies]
shadow-rs = "1.6"

# ===========================================================================
# Dev Dependencies
# ===========================================================================

[dev-dependencies]
serial_test = "3.2"
tempfile = "3.23"

# ===========================================================================
# Features
# ===========================================================================
[features]
# --- Default ---
default = ["community"]

# --- Runtime ---
core = []

# --- Community Edition (default) ---
community = [
    "core",
    "kafka",
    "doris",
    "mysql",
    "postgres",
    "clickhouse",
    "http",
    "elasticsearch",
    "prometheus",
    "victorialogs",
    "victoriametrics"
]

# --- Connectors (via wp_connectors) ---
kafka = ["wp-connectors/kafka"]
mysql = ["wp-connectors/mysql"]
postgres = ["wp-connectors/postgres"]
doris = ["wp-connectors/doris"]
clickhouse = ["wp-connectors/clickhouse"]
http = ["wp-connectors/http"]
elasticsearch = ["wp-connectors/elasticsearch"]
prometheus = ["wp-connectors/prometheus"]
victorialogs = ["wp-connectors/victorialogs"]
victoriametrics = ["wp-connectors/victoriametrics"]

# --- Enterprise ---

# --- Convenience ---
all = ["community"]

# --- Testing (cfg gates) ---
sys_test = []
res_depend_test = []

# --- Development ---
examples = []
perf-ci = []
dev-tools = []
wp-enterprise = []

# --- Plugins (placeholder for compatibility) ---
example-plugin = []
extras = []
plugin-suite = []

# ===========================================================================
# Dependencies
# ===========================================================================
#

[dependencies]
# --- System and Platform ---
libc = "0.2"
tikv-jemallocator = "0.6"

# --- Async Runtime ---
tokio = { version = "1.48", features = ["full"] }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
semver = "1.0"
reqwest = "0.13.2"

# --- Logging and Errors ---
anyhow = "1.0"
orion-error = "0.6"
orion-sec = "0.4"
orion-variate = "0.11"
orion_conf = { version = "0.5", features = ["yaml", "toml"] }

# --- Time ---
time = "0.3"

# --- CLI ---
clap = { version = "4.5", features = ["derive"] }

# --- Parsing ---
#regex = "~1.11"

# --- Derive Macros ---

# --- Utilities ---
#bytes = "~1.7"
once_cell = "1.21"
shadow-rs = { version = "1.6.0", default-features = false }
rand = "0.9"

# --- Data Structures ---

# --- File System ---
glob = "0.3"

# --- Internal: Open API ---

wp-connector-api = "0.8"

# --- Internal: Infrastructure ---
wp-log = "0.2"
wp-error = "0.8"

# --- Internal: Engine ---

# feats/oml_static.1


wp-engine     = {                            git = "https://github.com/wp-labs/wp-motor", tag = "v1.18.3" }
wp-config     = { package = "wp-config",     git = "https://github.com/wp-labs/wp-motor", tag = "v1.18.3" }
wp-cli-core   = { package = "wp-cli-core",   git = "https://github.com/wp-labs/wp-motor", tag = "v1.18.3" }
wp-proj       = { package = "wp-proj",       git = "https://github.com/wp-labs/wp-motor", tag = "v1.18.3" }

wp-connectors = { package = "wp-connectors", git = "https://github.com/wp-labs/wp-connectors", tag = "v0.10.1" }


#wp-engine = { path = "../wp-motor" }
#wp-config = { path = "../wp-motor/crates/wp-config" }
#wp-lang   = { path = "../wp-motor/crates/wp-lang" }
#wp-knowledge  = { path = "../wp-motor/crates/wp-knowledge" }
#wp-cli-core   = { path = "../wp-motor/crates/wp-cli-core" }
#wp-proj       = { path = "../wp-motor/crates/wp-proj" }

# wp-enterprise = { path = "../wp-enterprise" }


# wp-connectors = { path = "../wp-connectors"}
