[package]
name = "warp-self-update"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
reqwest = "0.13.2"
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.19", features = ["v4"] }
walkdir = "2.5"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
libc = "0.2"
wp-error = "0.8"
orion-error = "0.6"

[dev-dependencies]
httpmock = "0.8"
tempfile = "3.27"
