[package]
name = "wp-self-update"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Self-update manifest resolver for warp-parse"

[dependencies]
reqwest = "0.13.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["time"] }
